<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBarHeight"
        android:background="@color/colorRed"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/driverDetailsTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold"
            android:gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolBar"
        android:background="@drawable/backgroundimage"
        android:padding="@dimen/padding"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/marginSmall"
            android:weightSum="1">

            <TextView
                android:id="@+id/DriverName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/driverName"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"
                />

            <TextView
                android:id="@+id/givenName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/marginSmall"
            android:weightSum="1">

            <TextView
                android:id="@+id/Drivernationality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/nationality"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/nationality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/marginSmall"
            android:weightSum="1">

            <TextView
                android:id="@+id/DriverdateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/dateOfBirth"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"
                 />

            <TextView
                android:id="@+id/dateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/marginSmall"
            android:weightSum="1">

            <TextView
                android:id="@+id/noOfRace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/racesWon"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/noOfRaceWon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/labelSize"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/urlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Visitbiography"
        android:textAllCaps="false"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/labelSize"
        android:padding="@dimen/smallPadding"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:layout_centerInParent="true"
        />
</RelativeLayout>